--- a/src/main/resources/accumulo-client.properties
+++ b/src/main/resources/accumulo-client.properties
@@ -38,10 +38,10 @@ instance.zookeepers=localhost:2181
 auth.type=password
 
 ## Accumulo principal/username for chosen authentication method
-auth.principal=gcr
+auth.principal=root
 
 ## Authentication token (ex. mypassword, /path/to/keytab)
-auth.token=d
+auth.token=haz
 
 
 ## Batch Writer properties
