--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script C\:\\Users\\Geoffry\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.38.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\Geoffry\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.38.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
-auto.sync=false
+arguments=--init-script C\:\\Users\\Geoffry\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.39.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\Geoffry\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.39.0\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
+auto.sync=true
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=../d4m.acc.microservice
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Program Files/Amazon Corretto/jdk1.8.0_432
+java.home=C\:/Program Files/Amazon Corretto/jdk17.0.13_11
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
