--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
 	implementation project(':FHIRSDS')
 	implementation 'org.cormac:fhir.emf:4.3.0'
+	implementation 'edu.mit.ll:graphulo:3.1.2'
+
 	implementation 'org.apache.accumulo:accumulo-core:2.1.3'
 	implementation 'org.springframework:spring-context:6.0.12'
 	// EMF
@@ -32,6 +34,7 @@ dependencies {
 	implementation 'org.eclipse.emf:org.eclipse.emf.ecore:2.38.0'
 	implementation 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.38.0'
 	implementation 'com.google.guava:guava:33.4.0-jre'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
 
 tasks.named('test') {
