--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 	implementation 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.38.0'
 	implementation 'com.google.guava:guava:33.4.0-jre'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-}
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+ }
 
 tasks.named('test') {
 	useJUnitPlatform()
