--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,32 @@ dependencies {
 
 	implementation 'org.apache.accumulo:accumulo-core:2.1.3'
 	implementation 'org.springframework:spring-context:6.0.12'
+	
+	// Logging
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
+    configurations.all {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-1.2-api'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    
 	// EMF
 	implementation 'org.eclipse.emf:org.eclipse.emf.common:2.40.0'
 	implementation 'org.eclipse.emf:org.eclipse.emf.ecore:2.38.0'
 	implementation 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.38.0'
 	implementation 'com.google.guava:guava:33.4.0-jre'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-    testImplementation 'org.mockito:mockito-core:5.5.0'
- }
-
+   	testImplementation 'org.mockito:mockito-core:5.5.0'
+  }
+  
 tasks.named('test') {
 	useJUnitPlatform()
+    
+    testLogging {
+        showStandardStreams = true
+    }
 }
