--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,14 @@ dependencies {
 	implementation 'org.springframework:spring-context:6.0.12'
 	
 	// Logging
-    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
-    configurations.all {
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-1.2-api'
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
-        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-        exclude group: 'ch.qos.logback', module: 'logback-classic'
-        exclude group: 'commons-logging', module: 'commons-logging'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.17.2' // Ensure this matches your Log4j version
+
+    // Core Log4j dependencies (if not already included)
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0' // Now correct for Log4j 2.19.0+
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+	configurations.all {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     }
     
 	// EMF
