--- a/build.gradle
+++ b/build.gradle
@@ -50,10 +50,9 @@ dependencies {
    	testImplementation 'org.mockito:mockito-core:5.5.0'
   }
   
-tasks.named('test') {
-	useJUnitPlatform()
-    
-    testLogging {
-        showStandardStreams = true
-    }
+test {
+    useJUnitPlatform()
+    testLogging.showStandardStreams = true
+}
+
 }
