--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'maven-publish'
 }
 
-group = 'com.cormacjar'
+group = 'org.psoppc.fhir'
 version = '0.0.1'
 
 java {
@@ -23,8 +23,8 @@ repositories {
 
 dependencies {
 
-	implementation project(':FHIRSDS')
-	implementation 'org.cormac:fhir.emf:4.3.0'
+	implementation project(':fhir.serdeser')
+	implementation 'org.hl7:fhir.emf:4.3.0'
 	implementation 'edu.mit.ll:graphulo:3.1.2'
 
 	implementation 'org.apache.accumulo:accumulo-core:2.1.3'
@@ -53,6 +53,4 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
-}
-
 }
