--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ repositories {
 
 dependencies {
 
-	api project(':FHIRSDS')
+	api project(':FHIRSerDeser')
+	implementation 'edu.mit.ll:graphulo:3.1.2'
 	implementation 'org.apache.accumulo:accumulo-core:2.1.3'
 	implementation 'org.springframework:spring-context:6.0.12'
 	// EMF
